# multi-entity-bi-reference

./: .env.example  .gitignore  README.md  SECURITY.md  conftest.py  pyproject.toml  pyrightconfig.json  smoke_test.py
.github/workflows/: ci.yml
agents/: __init__.py  base.py  l1_classifier.py  l2_analyzer.py  l3_synthesizer.py  l4_delivery.py
context/: __init__.py  schema.sql  store.py
docs/: architecture.html  sample_run.md
examples/: demo_run.py
orchestrator/: __init__.py  router.py
schemas/: __init__.py  models.py
tests/: conftest.py  test_integration_l1_l2_l3.py  test_l1_classifier.py  test_regression.py  test_schema_validation.py
