[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-entity-bi-reference"
version = "0.1.0"
description = "Reference implementation of a tiered-LLM multi-agent system for cross-entity business intelligence. Demonstrates L1/L2/L3 orchestration, shared context, schema validation at LLM boundaries, and auditable decisioning."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Priyanshu Kumar" }]
keywords = ["claude", "anthropic", "multi-agent", "business-intelligence", "llm-orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.50.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/Jp220124/multi-entity-bi-reference"

[tool.hatch.build.targets.wheel]
packages = ["agents", "context", "orchestrator", "schemas"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --strict-markers"
